Clean Code (Change Code Directories, Remove Unused Code, Optimise code)